# TP1-IFT630

./: CMakeLists.txt  README.md  barber.h  barber_sem.cpp  barber_sem.h  main.cpp  philosophers.cpp  philosophers.h  roller_coaster_sem.cpp  utils.h
hatem/: philo.cpp  philo.h
hatem/Hatem essai barbier/: Barber.cpp  BarberShop.cpp  semaphore.h
